--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
-    "react": "^18.3.1",
+    "react": "^16.0.0",
     "react-bootstrap": "^2.10.2",
-    "react-dom": "^18.3.1",
+    "react-dom": "^16.14.0",
     "react-icons": "^5.2.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
